fixed alignments

--- a/assets/css/eventdetails.css
+++ b/assets/css/eventdetails.css
@@ -3,7 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+header{
+    position:sticky;
+    top:0;
+    z-index: 1000;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
 nav {
     background-color: #000080;
 }
@@ -35,8 +40,8 @@ nav {
     color: #FF007F;
     font-family: sans-serif;
     font-weight: bold;
-    padding: 11px;
-    font-size: 18px;
+    padding: 23px;
+    font-size: 16px;
     text-decoration: none;
 
 }
@@ -50,17 +55,17 @@ nav {
 
 .container button {
     color: #ee2a7b;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
 }
 
 .container button i {
     color: white;
-    font-size: 25px;
+    font-size: 23px;
 }
 
 .logo img {
-    width: 120px;
+    width: 110px;
 
 }
 
