--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,20 +3,27 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+header{
+    position:sticky;
+    top:0;
+    z-index: 1000;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
 nav {
     background-color: #000080;
+    width: 100%; 
+   
 }
 
 .container {
     display: flex;
     justify-content:center;
-
+  
     align-items: center;
     width: 100%;
     margin: auto;
     max-width: 1200px; /* Adjust as needed */
-   
+  
 }
 
 .nav-links {
